--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
 </head>
 
 <body>
+
     <header class="menu-wrap">
-        <nav class="menu"></nav>
+        <div class="menu-logo">
+            <img src="img/small_logo.PNG" alt="logo">
+        </div>
+       <nav class="menu-container">
+            <ul class="menu">
+                <li class="menu-list">HOME</li>
+                <li class="menu-list">NEWS</li>
+                <li class="menu-list">EVENTS</li>
+                <li class="menu-list">PROGRAMS</li>
+                <li class="menu-list">SPACES</li>
+                <li class="menu-list">MORE</li>
+            </ul>
+        </nav>
+        <div class="menu-icon">
+            <img src="img/icons/email.svg" width="20" height="20" id="mail-icon" alt="email-icon">
+        </div>
     </header>
+
 </body>
 
 </html>
