add latest news section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-
+    
+    <!--- HEADER -->
     <header class="menu-wrap">
         <div class="menu-logo">
             <img src="img/small_logo.PNG" alt="logo">
@@ -27,6 +28,55 @@
         </div>
     </header>
 
+    <!--- PAGE HEADER -->
+    <section>
+        <div class="page-header">
+            <div class="page-logo">
+                <img src="img/page_logo.PNG">
+            </div>
+            <div class="page-motto">
+                <span>The heart of tech</span>
+            </div>
+        </div>
+    </section> 
+    
+
+    <!--- LATEST ARTICLES -->
+    <section class="latest-articles">
+        <div class="art1">
+            <div class="art-description">
+                <p class="art-title">ALL ABOARD THE METAVERSE</p>
+                <p class="art-description-main">Facebook is making glasses with Ray-Ban - but don't expect AR features</p>
+            </div>
+        </div>
+        <div class="art2">
+            <div class="art-description">
+                <p class="art-title">NEURAL</p>
+                <p class="art-description-secondary">Immortality or spaghetti? why parking your spaceship inside a black hole is a huge gamble</p>
+            </div>
+        </div>
+        <div class="art3">
+            <div class="art-description">
+                <p class="art-title">NEURAL</p>
+                <p class="art-description-secondary">The age of metaverse is upon us</p>
+            </div>
+        </div>
+        <div class="advs">
+            <div class="advs-description">
+                <span class="art-description-secondary">This is the one event you don't want to miss</span>
+                <p class="art-description-secondary">TNW Conference goes hybrid</p>
+            </div>
+            <div class="advs-btn-container">
+                <button class="advs-btn">GET TICKETS</button>
+            </div>
+        </div>
+        <div class="gif">
+            <div class="gif-description">
+                <p class="art-title">NOTHING EAR REVIEW</p>
+                <p class="art-description-secondary">Style...and substance</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
