add POPULAR ARTICLES section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,31 @@
             </div>
         </div>
     </section>
+
+    <!--- POPULAR ARTICLES TODAY -->
+    <section class="popular-articles">
+        <div class="pop-title">POPULAR ARTICLES TODAY</div>
+        <div >
+            <ol class="pop-art-wrapper">
+                <li>
+                   <h4>Google’s ‘time crystals’ could be the greatest scientific achievement of our lifetimes</h4>
+                </li>
+                <li>
+                    <h4>Can your PC handle Windows11? Here's how to find out</h4>
+                </li>
+                <li>
+                    <h4>How to get the most out of Python classes</h4>
+                </li>
+                <li>
+                    <h4>The Windows 11 beta is finally out - here's how to install it</h4>
+                </li>
+                <li>
+                    <h4>How gravitational forces stop Earth's asymmetrical core from tipping us over</h4>
+                </li>
+            </ol>
+        </div>
+    </section>
+
 </body>
 
 </html>
