add LATEST STORIES section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,73 @@
         </div>
     </section>
 
+    <!--- LATEST STORIES -->
+    <section class="latest-stories">
+        <div class="lat-stor-title">Latest stories</div>
+        <div class="lat-stor-wrapper">
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/1.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    School up on all of Adobe's most powerfull digital creation apps for under $25                    
+                </h4>
+                <div class="time-ago">55 minutes ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/2.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    What to launch a career as a Google-ready software engineer? This training can help for under $20                    
+                </h4>
+                <div class="time-ago">1 hour ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/3.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    Everything you need to know about stablecoins                    
+                </h4>
+                <div class="time-ago">5 hours ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/6.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    Can your PC handle Windows 11? Here's how to find out                    
+                </h4>
+                <div class="time-ago">17 hours ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/5.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    Prep in a dozen valuable CompTIA training areas with these $45 courses                    
+                </h4>
+                <div class="time-ago">1 day ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/6.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    How to get the most out of Python classes                    
+                </h4>
+                <div class="time-ago">1 day ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/7.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    How gravitational forces stop Earth's asymmetrical core from tipping us over                   
+                </h4>
+                <div class="time-ago">1 day ago</div>
+            </div>
+            <div class="lat-stor-articles">
+                <img src="/img/last-stories/8.jpg" alt="latest story image">
+                <h4 class="lat-stor-description">
+                    Founder of EV startup Nikola charged with misleading investors                   
+                </h4>
+                <div class="time-ago">1 day ago</div>
+            </div>
+        </div>
+        <div class="lat-stor-btn-wrapper">
+            <button class="lat-stor-btn">ALL NEWS</button>
+        </div>
+        
+    </section>
+
 </body>
 
 </html>
