add NEWSLETTER section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,30 @@
         </div>
         
     </section>
+    
+    <!--- NEWSLETTER-->
+    <section class="newsletter">
+        <div class="newsletter-container">
+            <p class="newsletter-title">Get the snarkiest newsletter in tech</p>
+            <p class="newsletter-describe">
+                Subscribe to our twice-weekly Big Spam or check out our other newsletters.
+            </p>
+            <form class="newsletter-form">
+               <div class="form-icon">
+                   <img src="/img/icons/email.svg" width="20" height="20" alt="email image">
+               </div>
+               <input class="email" type="email" placeholder="Email" >
+               <button class="form-btn" type="submit">SUBSCRIBE</button> 
+            </form>
+            <div class="newsletter-social">
+                <img class="social-icon" src="img/icons/Facebook_white.svg" alt="facebook icon">
+                <img class="social-icon" src="img/icons/Instagram_white.svg" alt="instagram icon">
+                <img class="social-icon" src="img/icons/Twitter_white.svg" alt="twitter icon">
+                <img class="social-icon" src="img/icons/Youtube_white.svg" alt="youtube icon">
+                <img class="social-icon" src="img/icons/LinkedIN_white.svg" alt="linkedin icon">
+            </div>
+        </div>        
+    </section>
 
 </body>
 
