add REACH YOUR GOALS section

--- a/index.html
+++ b/index.html
@@ -193,6 +193,46 @@
         </div>        
     </section>
 
+    <!--- REACH YOUR GOALS-->
+    <section class="reach-goals">
+        <div class="reach-container">
+            <div class="reach-description">
+                <p class="reach-section">REACH YOUR GOALS</p>
+                <p class="reach-title">Work with us</p>
+                <p class="reach-text">TNW takes center stage in the tech industry, offering creative media campaigns, sizzling tech events, bespoke innovation programs, and prime office locations in Amsterdam. Want to engage your audience more effectively, innovate your business, and position your brand in front of a digital-savvy audience?</p>
+                <button class="reach-btn">GET IN TOUCH</button>
+            </div>
+            <div class="reach-images-container">
+                <div class="reach-img">
+                    <img src="/img/icons/pillar-media.svg" alt="media image">
+                    <h4>Media</h4>
+                </div>
+                <div class="reach-img">
+                    <img src="/img/icons/pillar-events.svg" alt="media image">
+                    <h4>Events</h4>
+                </div>
+                <div class="reach-img">
+                    <img src="/img/icons/pillar-spaces.svg" alt="media image">
+                    <h4>Spaces</h4>
+                </div>
+                <div class="reach-img">
+                    <img src="/img/icons/pillar-programs.svg" alt="media image">
+                    <h4>Programs</h4>
+                </div>
+            </div>
+        </div>
+        <div class="reach-partner">
+            <img class="partner-icon" src="img/icons/google.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/etoro.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/ibm.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/microsoft.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/paypal.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/vodafone.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/accenture.svg" alt="partner's logo">
+            <img class="partner-icon" src="img/icons/mckinsey-company.svg" alt="partner's logo">
+        </div>
+    </section>
+
 </body>
 
 </html>
