--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    
+  
     <!--- HEADER -->
     <header class="menu-wrap">
         <div class="menu-logo">
@@ -40,7 +40,6 @@
         </div>
     </section> 
     
-
     <!--- LATEST ARTICLES -->
     <section class="latest-articles">
         <div class="art1">
@@ -232,6 +231,50 @@
             <img class="partner-icon" src="img/icons/mckinsey-company.svg" alt="partner's logo">
         </div>
     </section>
+
+    <!--- FOOTER -->
+    <footer class="footer-wrapper">
+        <div class="top-footer">
+            <div class="footer-logo-wrapper">
+                <img src="img/white_logo.PNG" alt="tnw logo image">
+                <p class="footer-moto">The heart of tech</p>
+                <div class="footer-icons-wrapper">
+                    <img class="social-icon" src="img/icons/Facebook_white.svg" alt="facebook icon">
+                    <img class="social-icon" src="img/icons/Instagram_white.svg" alt="instagram icon">
+                    <img class="social-icon" src="img/icons/Twitter_white.svg" alt="twitter icon">
+                    <img class="social-icon" src="img/icons/Youtube_white.svg" alt="youtube icon">
+                    <img class="social-icon" src="img/icons/LinkedIN_white.svg" alt="linkedin icon">
+                </div>
+            </div>
+            <div class="footer-more">
+                <h3>MORE TNW</h3>
+                <ul class="more-title">
+                    <li>Media</li>
+                    <li>Events</li>
+                    <li>Programs</li>
+                    <li>Spaces</li>
+                    <li>Newsletters</li>
+                </ul>
+            </div>
+            <div class="footer-more">
+                <h3>ABOUT TNW</h3>
+                <ul class="more-title">
+                    <li>Contact Us</li>
+                    <li>Partner with us</li>
+                    <li>Advertise</li>
+                    <li>Jobs</li>
+                    <li>Terms & Conditions</li>
+                    <li>Cookie Statement</li>
+                    <li>Privacy statement</li>
+                    <li>Editorial Policy</li>
+                </ul>
+            </div>
+        </div>
+        <div class="bottom-footer">
+            <p>TNW is a Financial Times company</p>
+            <p> Made with love in Poland.</p>
+        </div>
+    </footer>
 
 </body>
 
