--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>TNW Clone</title>
+    <link rel="icon" href="img/favicon-96x96.webp" type="image/x-icon">
     <link href="style.css" rel = "stylesheet" type = "text/css">
 </head>
 
