--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <div class="menu-logo">
             <img src="img/small_logo.PNG" alt="logo">
         </div>
+        <div class="small-menu-btn">
+            <img src="img/small_menu.svg" alt="menu" height="30" width="30">
+        </div>
+        <div class="menu-logo-light">
+            <img src="img/logo-light.PNG" alt="logo">
+        </div>
        <nav class="menu-container">
             <ul class="menu">
                 <li class="menu-list">HOME</li>
@@ -277,7 +283,6 @@
             <p> Made with love in Poland.</p>
         </div>
     </footer>
-
+    
 </body>
-
 </html>
