add burger menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="menu-logo-light">
             <img src="img/logo-light.PNG" alt="logo">
         </div>
-       <nav class="menu-container">
+        <nav class="menu-container">
             <ul class="menu">
                 <li class="menu-list">HOME</li>
                 <li class="menu-list">NEWS</li>
@@ -35,6 +35,37 @@
             <img src="img/icons/email.svg" width="20" height="20" id="mail-icon" alt="email-icon">
         </div>
     </header>
+
+     <!--- MENU BURGER-->
+     <div class="menu-burger-wrap">
+        <div class="menu-burger_header">
+            <div class="menu-burger_close">
+                <img src="./img/icons/close-burger-icon.svg" width="40" alt="close menu icon">
+            </div>
+            <div class="menu-burger_logo">
+                <img src="./img/menu-burger-logo.PNG" alt="menu logo">
+            </div>
+        </div>
+        <nav class="menu-burger_container">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Programs</a></li>
+                <li><a href="#">Spaces</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
+        </nav>
+        <footer class="menu-burger_footer">
+            <div class="menu-burger_icons">
+                <img src="./img/icons/Facebook_white.svg" height="40" alt="fb icon">
+                <img src="./img/icons/Instagram_white.svg" height="40" alt="inst icon">
+                <img src="./img/icons/Twitter_white.svg"  height="40" alt="twitter icon">
+                <img src="./img/icons/Youtube_white.svg" height="40" alt="youtube icon">
+                <img src="./img/icons/LinkedIN_white.svg" height="40" alt="ld icon">
+            </div>
+        </footer>
+    </div>
 
     <!--- PAGE HEADER -->
     <section>
@@ -283,6 +314,9 @@
             <p> Made with love in Poland.</p>
         </div>
     </footer>
+    
+    <!--- SCRIPT -->
+    <script src="script.js"></script>
     
 </body>
 </html>
